// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`triggerSearch displayAllGames and displayGame should match the snapshot if games in state has length 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Search
    updateFavorites={[Function]}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <form
          onSubmit={[Function]}
>
          <input
                    name="search"
                    onChange={[Function]}
                    placeholder="Search for board games"
                    type="text"
                    value=""
          />
          <button
                    type="submit"
          >
                    Search
          </button>
</form>,
        <div
          className="display-friends"
>
          <section
                    className="search-results"
          >
                    <h3
                              onClick={[Function]}
                    >
                              Mysterium
                    </h3>
          </section>
</div>,
        <div />,
      ],
      "className": "Search",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              name="search"
              onChange={[Function]}
              placeholder="Search for board games"
              type="text"
              value=""
/>,
            <button
              type="submit"
>
              Search
</button>,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "name": "search",
              "onChange": [Function],
              "placeholder": "Search for board games",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Search",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Search",
            "type": "button",
          },
        ],
        "type": "form",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <section
            className="search-results"
>
            <h3
                        onClick={[Function]}
            >
                        Mysterium
            </h3>
</section>,
          "className": "display-friends",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                onClick={[Function]}
>
                Mysterium
</h3>,
            ],
            "className": "search-results",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": "Mysterium",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Mysterium",
              "type": "h3",
            },
          ],
          "type": "section",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <form
            onSubmit={[Function]}
>
            <input
                        name="search"
                        onChange={[Function]}
                        placeholder="Search for board games"
                        type="text"
                        value=""
            />
            <button
                        type="submit"
            >
                        Search
            </button>
</form>,
          <div
            className="display-friends"
>
            <section
                        className="search-results"
            >
                        <h3
                                    onClick={[Function]}
                        >
                                    Mysterium
                        </h3>
            </section>
</div>,
          <div />,
        ],
        "className": "Search",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                name="search"
                onChange={[Function]}
                placeholder="Search for board games"
                type="text"
                value=""
/>,
              <button
                type="submit"
>
                Search
</button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "name": "search",
                "onChange": [Function],
                "placeholder": "Search for board games",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Search",
                "type": "submit",
              },
              "ref": null,
              "rendered": "Search",
              "type": "button",
            },
          ],
          "type": "form",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <section
              className="search-results"
>
              <h3
                            onClick={[Function]}
              >
                            Mysterium
              </h3>
</section>,
            "className": "display-friends",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h3
                  onClick={[Function]}
>
                  Mysterium
</h3>,
              ],
              "className": "search-results",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "host",
                "props": Object {
                  "children": "Mysterium",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Mysterium",
                "type": "h3",
              },
            ],
            "type": "section",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`triggerSearch displayAllGames should match the snapshot if games in state has no length 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Search
    updateFavorites={[Function]}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <form
          onSubmit={[Function]}
>
          <input
                    name="search"
                    onChange={[Function]}
                    placeholder="Search for board games"
                    type="text"
                    value=""
          />
          <button
                    type="submit"
          >
                    Search
          </button>
</form>,
        <div
          className="display-friends"
>
          <section
                    className="search-results"
          >
                    <h4>
                               No search results currently 
                    </h4>
          </section>
</div>,
        <div />,
      ],
      "className": "Search",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              name="search"
              onChange={[Function]}
              placeholder="Search for board games"
              type="text"
              value=""
/>,
            <button
              type="submit"
>
              Search
</button>,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "name": "search",
              "onChange": [Function],
              "placeholder": "Search for board games",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Search",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Search",
            "type": "button",
          },
        ],
        "type": "form",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <section
            className="search-results"
>
            <h4>
                         No search results currently 
            </h4>
</section>,
          "className": "display-friends",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h4>
               No search results currently 
</h4>,
            "className": "search-results",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": " No search results currently ",
            },
            "ref": null,
            "rendered": " No search results currently ",
            "type": "h4",
          },
          "type": "section",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <form
            onSubmit={[Function]}
>
            <input
                        name="search"
                        onChange={[Function]}
                        placeholder="Search for board games"
                        type="text"
                        value=""
            />
            <button
                        type="submit"
            >
                        Search
            </button>
</form>,
          <div
            className="display-friends"
>
            <section
                        className="search-results"
            >
                        <h4>
                                     No search results currently 
                        </h4>
            </section>
</div>,
          <div />,
        ],
        "className": "Search",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                name="search"
                onChange={[Function]}
                placeholder="Search for board games"
                type="text"
                value=""
/>,
              <button
                type="submit"
>
                Search
</button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "name": "search",
                "onChange": [Function],
                "placeholder": "Search for board games",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Search",
                "type": "submit",
              },
              "ref": null,
              "rendered": "Search",
              "type": "button",
            },
          ],
          "type": "form",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <section
              className="search-results"
>
              <h4>
                             No search results currently 
              </h4>
</section>,
            "className": "display-friends",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h4>
                 No search results currently 
</h4>,
              "className": "search-results",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": " No search results currently ",
              },
              "ref": null,
              "rendered": " No search results currently ",
              "type": "h4",
            },
            "type": "section",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`triggerSearch displayGame should match the snapshot if game in state exists 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Search
    updateFavorites={[Function]}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <form
          onSubmit={[Function]}
>
          <input
                    name="search"
                    onChange={[Function]}
                    placeholder="Search for board games"
                    type="text"
                    value=""
          />
          <button
                    type="submit"
          >
                    Search
          </button>
</form>,
        <div
          className="display-friends"
>
          <section
                    className="search-results"
          >
                    <h4>
                               No search results currently 
                    </h4>
          </section>
</div>,
        <article
          className="game-description"
>
          <button
                    id="add-game"
                    onClick={[Function]}
          >
                    <i
                              className="fas fa-plus"
                    />
          </button>
          <Connect(Card)
                    display="hide"
                    favorite={
                              Object {
                                        "description": "A mystery game with pictures",
                                        "id": "123",
                                        "image": "src",
                                        "name": "Mysterium",
                                        "thumbnail": "src",
                                      }
                    }
          />
</article>,
      ],
      "className": "Search",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              name="search"
              onChange={[Function]}
              placeholder="Search for board games"
              type="text"
              value=""
/>,
            <button
              type="submit"
>
              Search
</button>,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "name": "search",
              "onChange": [Function],
              "placeholder": "Search for board games",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Search",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Search",
            "type": "button",
          },
        ],
        "type": "form",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <section
            className="search-results"
>
            <h4>
                         No search results currently 
            </h4>
</section>,
          "className": "display-friends",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h4>
               No search results currently 
</h4>,
            "className": "search-results",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": " No search results currently ",
            },
            "ref": null,
            "rendered": " No search results currently ",
            "type": "h4",
          },
          "type": "section",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <button
              id="add-game"
              onClick={[Function]}
>
              <i
                            className="fas fa-plus"
              />
</button>,
            <Connect(Card)
              display="hide"
              favorite={
                            Object {
                                          "description": "A mystery game with pictures",
                                          "id": "123",
                                          "image": "src",
                                          "name": "Mysterium",
                                          "thumbnail": "src",
                                        }
              }
/>,
          ],
          "className": "game-description",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <i
                className="fas fa-plus"
/>,
              "id": "add-game",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "fas fa-plus",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "type": "button",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "display": "hide",
              "favorite": Object {
                "description": "A mystery game with pictures",
                "id": "123",
                "image": "src",
                "name": "Mysterium",
                "thumbnail": "src",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "article",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <form
            onSubmit={[Function]}
>
            <input
                        name="search"
                        onChange={[Function]}
                        placeholder="Search for board games"
                        type="text"
                        value=""
            />
            <button
                        type="submit"
            >
                        Search
            </button>
</form>,
          <div
            className="display-friends"
>
            <section
                        className="search-results"
            >
                        <h4>
                                     No search results currently 
                        </h4>
            </section>
</div>,
          <article
            className="game-description"
>
            <button
                        id="add-game"
                        onClick={[Function]}
            >
                        <i
                                    className="fas fa-plus"
                        />
            </button>
            <Connect(Card)
                        display="hide"
                        favorite={
                                    Object {
                                                "description": "A mystery game with pictures",
                                                "id": "123",
                                                "image": "src",
                                                "name": "Mysterium",
                                                "thumbnail": "src",
                                              }
                        }
            />
</article>,
        ],
        "className": "Search",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                name="search"
                onChange={[Function]}
                placeholder="Search for board games"
                type="text"
                value=""
/>,
              <button
                type="submit"
>
                Search
</button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "name": "search",
                "onChange": [Function],
                "placeholder": "Search for board games",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Search",
                "type": "submit",
              },
              "ref": null,
              "rendered": "Search",
              "type": "button",
            },
          ],
          "type": "form",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <section
              className="search-results"
>
              <h4>
                             No search results currently 
              </h4>
</section>,
            "className": "display-friends",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h4>
                 No search results currently 
</h4>,
              "className": "search-results",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": " No search results currently ",
              },
              "ref": null,
              "rendered": " No search results currently ",
              "type": "h4",
            },
            "type": "section",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <button
                id="add-game"
                onClick={[Function]}
>
                <i
                                className="fas fa-plus"
                />
</button>,
              <Connect(Card)
                display="hide"
                favorite={
                                Object {
                                                "description": "A mystery game with pictures",
                                                "id": "123",
                                                "image": "src",
                                                "name": "Mysterium",
                                                "thumbnail": "src",
                                              }
                }
/>,
            ],
            "className": "game-description",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <i
                  className="fas fa-plus"
/>,
                "id": "add-game",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "fas fa-plus",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "display": "hide",
                "favorite": Object {
                  "description": "A mystery game with pictures",
                  "id": "123",
                  "image": "src",
                  "name": "Mysterium",
                  "thumbnail": "src",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "article",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
